--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -90,6 +90,34 @@ body {
   }
 }
 
+.animates {
+  background-size: 200% 200%;
+  animation: back-forth 10s ease infinite;
+}
+
+@keyframes back-forth {
+  0% {
+    left: -5px;
+    top: -5px;
+  }
+  25% {
+    left: -40px;
+    top: -40px;
+  }
+  50% {
+    left: -5px;
+    left: -5px;
+  }
+  75% {
+    left: -40px;
+    left: -40px;
+  }
+  100% {
+    left: -5px;
+    top: -5px;
+  }
+}
+
 *::-webkit-scrollbar-track {
   border-radius: 5px;
   color: var(--arrow-icon);
