integrated hubspot API in join waitlist dialog

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,6 +16,7 @@
   --border-gradient: #004aad;
   --dialog-bg: #242424;
   --bg-input: #333333;
+  --error-message: #f64e60;
   --league-spartan-black: "Spartan-Black";
   --league-spartan-bold: "Spartan-Bold";
   --league-spartan-extra-bold: "Spartan-Extra-Bold";
