--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,5 @@
 @import url(../assets/fonts/all-fonts.css);
+@import url(../styles/international-phone-input.css);
 
 @tailwind base;
 @tailwind components;
