--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,7 @@
 
 :root {
   --scroller: #dfdfdf;
+  --section-color: #f0eef5;
   --bg-gradient-color: #5e17eb;
   --black-color: #000000;
   --white-text: #ffffff;
@@ -187,7 +188,7 @@ body {
   background: transparent !important;
 }
 
-.MuiListItem-gutters>a {
+.MuiListItem-gutters > a {
   width: 100% !important;
   transition: background 0.4s ease;
 }
