Added logic to change background color of navbar on hover

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,7 @@
 
 :root {
   --scroller: #dfdfdf;
+  --hover-nav-color: #090215;
   --section-color: #f0eef5;
   --bg-gradient-color: #5e17eb;
   --black-color: #000000;
