Added background color in pricing page image

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,6 +22,7 @@
   --error-message: #f64e60;
   --border-tab: #222082;
   --bg-card: #080213;
+  --img-bg: #d9d9d9;
   --league-spartan-black: "Spartan-Black";
   --league-spartan-bold: "Spartan-Bold";
   --league-spartan-extra-bold: "Spartan-Extra-Bold";
