--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -394,6 +394,14 @@ body {
 }
 
 @media only screen and (min-width: 50px) and (max-width: 599px) {
+  @keyframes glow {
+    0%{
+      box-shadow: 0px 0px 10px 5px rgba(236, 39, 182, 0.5);
+    }
+    100%{
+      boxShadow: 0px 0px 20px 10px rgba(236, 39, 182, 1);
+    }
+  }
   .borderImg {
     width: 180px !important;
     height: 180px !important;
