--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -55,9 +55,17 @@ body {
   background: linear-gradient(to bottom, var(--black-color), var(--bg-gradient-color)) !important;
 } */
 
+li.MuiListItem-root span{
+  font-family: inherit !important;
+}
+.coreValueCard svg{
+  width: 100%;
+  height: 100%;
+}
+
 .borderNav {
   text-align: center;
-  border-bottom: 2px solid transparent;
+  border-bottom: 2px solid transparent !important;
   border-image: linear-gradient(0.25turn, transparent, var(--button-shadow), transparent);
   border-image-slice: 1;
   width: 100%;
@@ -513,7 +521,12 @@ body {
     transform: rotate(-45deg);
   }
 }
-
+@media (min-width: 768px) and (max-width: 900px){
+  .pricing-Cards-wrapper>div:nth-child(2) {
+    order: -1;
+    width: 100% !important;
+  }
+}
 .animate-bounce {
   animation: bounce 1s infinite ease-in-out;
 }
