--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -2,7 +2,7 @@ h1 {
     font-size: 30px !important;
     line-height: 36px !important;
 
-    @media (min-width: 768px) {
+    @media (min-width: 600px) {
         font-size: 40px !important;
         line-height: 50px !important;
     }
@@ -19,31 +19,51 @@ h1 {
 }
 
 h2 {
-    font-size: 26px !important;
-    line-height: 34px !important;
+    font-size: 28px !important;
+    line-height: 36px !important;
 
-    @media (min-width: 768px) {
-        font-size: 32px !important;
-        line-height: 42px !important;
+    @media (min-width: 600px) {
+        font-size: 34px !important;
+        line-height: 44px !important;
     }
 
     @media (min-width: 1280px) {
-        font-size: 38px !important;
+        font-size: 40px !important;
         line-height: 48px !important;
     }
 
     @media (min-width: 1536px) {
-        font-size: 45px !important;
+        font-size: 48px !important;
         line-height: 55px !important;
     }
 }
 
-p {
-    font-size: 16px;
-    line-height: 26px;
+h3 {
+    font-size: 24px !important;
+    line-height: 30px !important;
+
+    @media (min-width: 600px) {
+        font-size: 30px !important;
+        line-height: 36px !important;
+    }
 
     @media (min-width: 1280px) {
-        font-size: 18px;
-        line-height: 28px;
+        font-size: 36px !important;
+        line-height: 46px !important;
+    }
+
+    @media (min-width: 1536px) {
+        font-size: 40px !important;
+        line-height: 50px !important;
+    }
+}
+
+p {
+    font-size: 18px;
+    line-height: 28px;
+
+    @media (min-width: 768px) {
+        font-size: 20px;
+        line-height: 30px;
     }
 }
