Chore: Tasha page sections, Font and Platform section fixes

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -10,7 +10,7 @@
   --scroller: #dfdfdf;
   --hover-nav-color: #090215;
   --section-color: #f0eef5;
-  --bg-gradient-color: #5e17eb;
+  --bg-gradient-color: #3533cd;
   --black-color: #000000;
   --white-text: #ffffff;
   --button-color: #3533cd;
