--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -1,40 +1,40 @@
 h1 {
     font-size: 30px !important;
-    line-height: 36px !important;
+    line-height: 32px !important;
 
     @media (min-width: 600px) {
         font-size: 40px !important;
-        line-height: 50px !important;
+        line-height: 40px !important;
     }
 
     @media (min-width: 1280px) {
         font-size: 55px !important;
-        line-height: 65px !important;
+        line-height: 55px !important;
     }
 
     @media (min-width: 1536px) {
         font-size: 65px !important;
-        line-height: 70px !important;
+        line-height: 65px !important;
     }
 }
 
 h2 {
     font-size: 28px !important;
-    line-height: 36px !important;
+    line-height: 30px !important;
 
     @media (min-width: 600px) {
         font-size: 34px !important;
-        line-height: 44px !important;
+        line-height: 36px !important;
     }
 
     @media (min-width: 1280px) {
         font-size: 40px !important;
-        line-height: 48px !important;
+        line-height: 42px !important;
     }
 
     @media (min-width: 1536px) {
         font-size: 48px !important;
-        line-height: 55px !important;
+        line-height: 50px !important;
     }
 }
 
@@ -55,6 +55,21 @@ h3 {
     @media (min-width: 1536px) {
         font-size: 40px !important;
         line-height: 50px !important;
+    }
+}
+
+h4 {
+    font-size: 20px !important;
+    line-height: 22px !important;
+
+    @media (min-width: 600px) {
+        font-size: 22px !important;
+        line-height: 24px !important;
+    }
+
+    @media (min-width: 1280px) {
+        font-size: 24px !important;
+        line-height: 26px !important;
     }
 }
 
