text color white changed

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -54,6 +54,18 @@ body {
   color: #ffffff;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+span,
+li,
+p {
+  color: #ffffff;
+}
+
 /* body {
   background: linear-gradient(to bottom, var(--black-color), var(--bg-gradient-color)) !important;
 } */
